--- a/quasar.extensions.json
+++ b/quasar.extensions.json
@@ -1,12 +1,8 @@
 {
   "@quasar/testing": {
-    "harnesses": [
-      "unit-vitest@alpha"
-    ]
+    "harnesses": ["unit-vitest@alpha"]
   },
   "@quasar/testing-unit-vitest": {
-    "options": [
-      "scripts"
-    ]
+    "options": ["scripts"]
   }
 }
