--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "author": "Marc Pont",
   "private": true,
   "scripts": {
-    "lint:check": "eslint .",
-    "lint:fix": "eslint --fix .",
-    "format:check": "prettier --check .",
-    "format:fix": "prettier --write .",
+    "lint:check": "eslint --ext .js,.vue ./",
+    "lint:fix": "eslint --ext .js,.vue --fix ./",
+    "format:check": "prettier --check \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
+    "format:fix": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"See package.json => scripts for available tests.\" && exit 0",
     "dev": "quasar dev",
     "build": "quasar build",
