--- a/package.json
+++ b/package.json
@@ -26,17 +26,18 @@
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
+    "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
     "@intlify/vite-plugin-vue-i18n": "^3.3.1",
     "@quasar/app-vite": "^1.0.0",
     "@quasar/quasar-app-extension-testing": "^2.1.0",
     "@quasar/quasar-app-extension-testing-unit-vitest": "^0.1.0",
+    "@vue/test-utils": "^2.0.0",
     "autoprefixer": "^10.4.2",
-    "eslint": "^8.10.0",
+    "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
     "postcss": "^8.4.14",
     "prettier": "^2.5.1",
-    "@vue/test-utils": "^2.0.0",
     "vitest": "^0.15.0"
   },
   "engines": {
