--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,16 @@
 {
-  "routes": [
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist/ssr",
+  "functions": {
+    "api/index.js": {
+      "memory": 1024
+    }
+  },
+  "rewrites": [
     {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/.*",
-      "dest": "/"
+      "source": "/api/(.*)",
+      "destination": "/api"
     }
   ]
 }
