Vercel config again

--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,10 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "buildCommand": "npm run build",
-  "outputDirectory": "dist/ssr",
+  "outputDirectory": ".",
   "functions": {
-    "api/index.js": {
+    "api/server.js": {
       "memory": 1024
     }
-  },
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api"
-    }
-  ]
+  }
 }
