Move back to SPA again

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,5 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "buildCommand": "npm run build",
-  "outputDirectory": ".",
-  "functions": {
-    "api/server.js": {
-      "memory": 1024
-    }
-  }
+  "outputDirectory": "dist/spa"
 }
