--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "format:check": "prettier --check \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "format:fix": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"See package.json => scripts for available tests.\" && exit 0",
-    "dev": "quasar dev -m ssr",
-    "build": "quasar build -m ssr",
+    "dev": "quasar dev",
+    "build": "quasar build",
     "test:unit": "vitest",
     "test:unit:ci": "vitest run"
   },
