--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "format:fix": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"See package.json => scripts for available tests.\" && exit 0",
     "dev": "quasar dev",
+    "dev:ssr": "quasar dev -m ssr",
     "build": "quasar build",
+    "build:ssr": "quasar build -m ssr",
     "test:unit": "vitest",
     "test:unit:ci": "vitest run"
   },
